--- a/Mood Food/Views/Home/Index.cshtml
+++ b/Mood Food/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Mood_Food.Models
+@model List<Product>
 @{
     ViewBag.Title = "Index";
 }
@@ -7,3 +8,12 @@
 
 <div>Testujemy</div>
 <div>@ViewBag.TestValue</div>
+
+
+<br />
+
+
+@foreach (var item in Model)
+{
+    <li>@item.Name</li>
+}
