--- a/Mood Food/Content/Site.css
+++ b/Mood Food/Content/Site.css
@@ -1,4 +1,5 @@
-﻿body {
+﻿
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -15,4 +16,3 @@ select,
 textarea {
     max-width: 280px;
 }
-
