--- a/Mood Food/Views/Shared/_Layout.cshtml
+++ b/Mood Food/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
         </a>
     </nav>
 
-    <div class="container body-content">
+    <div >
         @RenderBody()
         <hr />
         <footer>
