Working on navbar. Added toggle button

--- a/Mood Food/Views/Shared/_Layout.cshtml
+++ b/Mood Food/Views/Shared/_Layout.cshtml
@@ -14,13 +14,23 @@
 
 </head>
 <body>
-    <nav class="navbar bg-danger navbar-light">
-        <a class="navbar-brand" href="#">
-            <i class="fas fa-hamburger"></i>
-            Mood Food
-        </a>
-    </nav>
+    <header>
+        <nav class="navbar bg-danger navbar-dark navbar-expand-md">
+            <a class="navbar-brand" href="#"><i class="fas fa-hamburger"></i> Mood Food</a>
 
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Przycisk nawigacyjny">
+               <span class="navbar-toggler-icon"></span>
+           </button>
+
+           <div class="collapse navbar-collapse" id="mainmenu">
+               <ul class="navbar-nav">
+                   <li class="nav-item">
+                       <a class="nav-link" href="#">Menu</a>
+                   </li>
+               </ul>
+           </div>
+        </nav>
+    </header>
     <div >
         @RenderBody()
         <hr />
