--- a/Mood Food/Views/Shared/_Layout.cshtml
+++ b/Mood Food/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar bg-danger navbar-dark navbar-expand-md">
+        <nav class="navbar bg-danger navbar-dark navbar-expand-sm">
             <a class="navbar-brand" href="#"><i class="fas fa-hamburger"></i> Mood Food</a>
 
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Przycisk nawigacyjny">
@@ -25,7 +25,13 @@
            <div class="collapse navbar-collapse" id="mainmenu">
                <ul class="navbar-nav">
                    <li class="nav-item">
-                       <a class="nav-link" href="#">Menu</a>
+                       <a class="nav-link" href="#">Strona główna</a>
+                   </li>
+                   <li>
+                       <a class="nav-link">Menu</a>
+                   </li>
+                   <li>
+                       <a class="nav-link">O nas</a>
                    </li>
                </ul>
            </div>
@@ -33,9 +39,10 @@
     </header>
     <div >
         @RenderBody()
-        <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <div class="footer-copyright text-center bg-danger text-light p-4">
+                @DateTime.Now.Year - &copy; MoodFood.com
+            </div>
         </footer>
     </div>
 
