--- a/Mood Food/Views/Shared/_Layout.cshtml
+++ b/Mood Food/Views/Shared/_Layout.cshtml
@@ -15,34 +15,47 @@
 </head>
 <body>
     <header>
-        <nav class="navbar bg-danger navbar-dark navbar-expand-sm">
+        <nav class="navbar bg-danger navbar-dark navbar-expand-md">
             <a class="navbar-brand" href="#"><i class="fas fa-hamburger"></i> Mood Food</a>
 
-           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Przycisk nawigacyjny">
-               <span class="navbar-toggler-icon"></span>
-           </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Przycisk nawigacyjny">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-           <div class="collapse navbar-collapse" id="mainmenu">
-               <ul class="navbar-nav">
-                   <li class="nav-item">
-                       <a class="nav-link" href="#">Strona główna</a>
-                   </li>
-                   <li>
-                       <a class="nav-link">Menu</a>
-                   </li>
-                   <li>
-                       <a class="nav-link">O nas</a>
-                   </li>
-               </ul>
-           </div>
+            <div class="collapse navbar-collapse" id="mainmenu">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Strona główna</a>
+                    </li>
+                    <li>
+                        <a class="nav-link">Menu</a>
+                    </li>
+                    <li>
+                        <a class="nav-link">Restauracja</a>
+                    </li>
+                    <li>
+                        <a class="nav-link">O nas</a>
+                    </li>
+                   
+                </ul>
+                <ul class="navbar-nav">
+                    <li>
+                        <a class="nav-link" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
-    <div >
+    <div>
         @RenderBody()
-        <footer>
-            <div class="footer-copyright text-center bg-danger text-light p-4">
-                @DateTime.Now.Year - &copy; MoodFood.com
-            </div>
+        <footer class="footer-copyright text-center bg-danger text-light p-4">
+                @DateTime.Now.Year - &copy; MoodFood <a class="text-light" href="mailto:digitalonions100@gmail.com">MoodFood@gamil.com</a>
         </footer>
     </div>
 
