Added route for static sites

--- a/Mood Food/Views/Shared/_Layout.cshtml
+++ b/Mood Food/Views/Shared/_Layout.cshtml
@@ -34,9 +34,8 @@
                         <a class="nav-link">Restauracja</a>
                     </li>
                     <li>
-                        <a class="nav-link">O nas</a>
+                        <a class="nav-link">Kontakt</a>
                     </li>
-                   
                 </ul>
                 <ul class="navbar-nav">
                     <li>
