--- a/Mood Food/Views/Info/Kontakt.cshtml
+++ b/Mood Food/Views/Info/Kontakt.cshtml
@@ -1,23 +1,9 @@
-﻿@using Mood_Food.Models
-@model List<Product>
+﻿
 @{
-    ViewBag.Title = "Mood Food";
+    ViewBag.Title = "Kontakt";
 }
 
-
-<h2>Index</h2>
-
-<div>Testujemy</div>
-<div>@ViewBag.TestValue</div>
-
-
-<br />
-
-
-@foreach (var item in Model)
-{
-    <li>@item.Name</li>
-}
+<h2>Kontakt</h2>
 
 <p class="card-body">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada turpis sit amet ex aliquet dapibus. Maecenas a dapibus nunc. Aliquam tempor mi mollis laoreet tincidunt. Sed varius neque vitae malesuada pharetra. Sed aliquet dui vitae enim fringilla, vitae accumsan augue imperdiet. Aenean felis sapien, venenatis non suscipit eget, auctor ut mi. Suspendisse potenti. Nunc laoreet metus eget lacus tristique, ac rhoncus nisl interdum.
