Added default images

--- a/Mood Food/Views/Shared/_Layout.cshtml
+++ b/Mood Food/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                 </ul>
             </div>
         </nav>
-        <img src="@Url.Content("~/Content/Images/banner.jpeg")" class="img-fluid " alt="Baner strony" />
+        <img src="@Url.Content("~/Content/Images/banner.jpeg")" class="img-fluid mb-2" alt="Baner strony" />
     </header>
     <main>
         @RenderBody()
