--- a/Mood Food/Views/Home/Index.cshtml
+++ b/Mood Food/Views/Home/Index.cshtml
@@ -3,11 +3,17 @@
 @{
     ViewBag.Title = "Mood Food";
 }
-
+@section scripts
+{
+    <script src="@Url.Content("~/Scripts/slider.js")" type="text/javascript"></script>
+}
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-6">
-            Tu będzie slider
+            <div>
+                <!--<img id="slider" src="@Url.Content("~/Content/Images/Hamburger.jpeg")" class="img-fluid" />-->
+                Tu będzie slider
+            </div>
         </div>
         <div class="col-md-6">
             <p class="card-body">
@@ -16,14 +22,21 @@
         </div>
     </div>
 </div>
-
-<ul>
-    @foreach (var item in Model)
-    {
-        <li>@item.Name</li>
-    }
-</ul>
-
+<div class="container-fluid">
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <div class="col-md-6">
+                <figure class="figure">
+                    <img src="@Url.Content("~/Content/Images/" + item.NameOfImage)" class="img-fluid" />
+                    <figcaption class="figure-caption text-center">
+                        @item.Name
+                    </figcaption>
+                </figure>
+            </div>
+        }
+    </div>
+</div>
 
 <p class="card-body">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada turpis sit amet ex aliquet dapibus. Maecenas a dapibus nunc. Aliquam tempor mi mollis laoreet tincidunt. Sed varius neque vitae malesuada pharetra. Sed aliquet dui vitae enim fringilla, vitae accumsan augue imperdiet. Aenean felis sapien, venenatis non suscipit eget, auctor ut mi. Suspendisse potenti. Nunc laoreet metus eget lacus tristique, ac rhoncus nisl interdum.
