--- a/Mood Food/Views/Home/Index.cshtml
+++ b/Mood Food/Views/Home/Index.cshtml
@@ -7,47 +7,46 @@
 @section scripts
 {
     <script type="text/javascript">
-        $(document).ready(function () {
-            let imageNamesArray = @Html.Raw(Json.Encode(Model.Select(x => Url.ProductImagePath(x.NameOfImage)).ToArray()));
-            let counter = 0;
 
-            setInterval(function () {
-                $("#slider").children(":first").attr("src", imageNamesArray[counter]);
-                counter++;
-                if (counter >= imageNamesArray.length)
-                    counter = 0;
-            }, 1000);
+        $(document).ready(function () {
+            $(".carousel-item:first").addClass("active");
         });
-   </script>
+    </script>
 }
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-6">
-            <div id="slider">
-                <img class="img-fluid" />
-                Tu będzie slider
+        <div class="col-md-4">
+            <div id="productImageSlider" class="carousel slide" data-ride="carousel" data-interval="2000">
+                <div class="carousel-inner">
+                    @foreach (var item in Model)
+                    {
+                        <div class="carousel-item">
+                            <figure class="figure">
+                                <img src="@Url.ProductImagePath(item.NameOfImage)" class="img-fluid ">
+                                <figcaption class="figure-caption text-center">
+                                    <h3>@item.Name</h3>
+                                </figcaption>
+                            </figure>
+                        </div>
+                    }
+                </div>
+                <a class="carousel-control-prev" href="#productImageSlider" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#productImageSlider" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
-        <div class="col-md-6">
-            <p class="card-body">
+        <div class="col-md-8">
+            <div class="jumbotron">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada turpis sit amet ex aliquet dapibus. Maecenas a dapibus nunc. Aliquam tempor mi mollis laoreet tincidunt. Sed varius neque vitae malesuada pharetra. Sed aliquet dui vitae enim fringilla, vitae accumsan augue imperdiet. Aenean felis sapien, venenatis non suscipit eget, auctor ut mi. Suspendisse potenti. Nunc laoreet metus eget lacus tristique, ac rhoncus nisl interdum.
-            </p>
-        </div>
-    </div>
-</div>
-<div class="container-fluid">
-    <div class="row">
-        @foreach (var item in Model)
-        {
-            <div class="col-md-6">
-                <figure class="figure">
-                    <img src=@Url.ProductImagePath(item.NameOfImage) class="img-fluid" />
-                    <figcaption class="figure-caption text-center">
-                        @item.Name
-                    </figcaption>
-                </figure>
+                <hr />
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada turpis sit amet ex aliquet dapibus. Maecenas a dapibus nunc. Aliquam tempor mi mollis laoreet tincidunt. Sed varius neque vitae malesuada pharetra. Sed aliquet dui vitae enim fringilla, vitae accumsan augue imperdiet. Aenean felis sapien, venenatis non suscipit eget, auctor ut mi. Suspendisse potenti. Nunc laoreet metus eget lacus tristique, ac rhoncus nisl interdum.
             </div>
-        }
+        </div>
     </div>
 </div>
 
