--- a/Mood Food/Views/Product/Categories.cshtml
+++ b/Mood Food/Views/Product/Categories.cshtml
@@ -1,7 +1,33 @@
 ﻿@model IEnumerable<Mood_Food.Models.Category>
+@using Mood_Food.Infrastructure;
 @{
     ViewBag.Title = "Menu";
 }
 <h2 class="text-center display-4">Menu</h2>
 
 
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-3 col-sm-6 ">
+            <div class="jumbotron bg-warning">
+                <h1 class="display-4 text-center">Całe menu</h1>
+                <p class="lead text-center">Mamy wszystko czego pragniesz!</p>
+                <hr class="my-4">
+                <img class="img-fluid ml-auto" src=@Url.CategoriesImagePath("Food.jpeg") />
+            </div>
+        </div>
+
+        @foreach (var item in Model)
+        {
+            <div class="col-lg-3 col-sm-6 ">
+                <div class="jumbotron bg-warning">
+                    <h1 class="display-4 text-center">@item.Name</h1>
+                    <p class="lead text-center">@item.Description</p>
+                    <hr class="my-4">
+                    <img class="img-fluid ml-auto" src=@Url.CategoriesImagePath(item.NameOfImage) />
+                </div>
+            </div>
+        }
+    </div>
+
+</div>
