Added route to browse products and products view

--- a/Mood Food/Content/Site.css
+++ b/Mood Food/Content/Site.css
@@ -1,13 +1,18 @@
-﻿body{
-   background-image: url(Images/background.png);
+﻿.nounderline {
+    text-decoration: none !important
+}
+
+body {
+    background-image: url(Images/background.png);
 }
 
 .jumbotron {
     padding-bottom: 40px;
     padding-top: 2px;
 }
-    .MlightColor{
-    background-color:#e9cca0;
+
+.MlightColor {
+    background-color: #e9cca0;
 }
 
 main {
