--- a/Mood Food/Views/Home/Index.cshtml
+++ b/Mood Food/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                             <figure class="figure">
                                 <img src="@Url.ProductImagePath(item.NameOfImage)" class="img-fluid ">
                                 <figcaption class="figure-caption text-center">
-                                    <h3>@item.Name</h3>
+                                    <h3 class="text-danger">@item.Name</h3>
                                 </figcaption>
                             </figure>
                         </div>
