--- a/Mood Food/Views/Shared/_Layout.cshtml
+++ b/Mood Food/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
     <main>
         @RenderBody()
     </main>
-    <footer class="footer-copyright text-center bg-danger text-light p-4">
+    <footer class="footer-copyright text-center bg-danger text-light p-4 mt-2">
         @DateTime.Now.Year - &copy; MoodFood <a class="text-light" href="mailto:digitalonions100@gmail.com">MoodFood@gamil.com</a>
     </footer>
 
