--- a/Mood Food/Views/Home/Index.cshtml
+++ b/Mood Food/Views/Home/Index.cshtml
@@ -22,9 +22,13 @@
                     {
                         <div class="carousel-item">
                             <figure class="figure">
-                                <img src="@Url.ProductImagePath(item.NameOfImage)" class="img-fluid ">
+                                <a class="text-danger nounderline" href=@Url.Action("Description","Product", new {id=item.ProductId })>
+                                    <img src="@Url.ProductImagePath(item.NameOfImage)" class="img-fluid ">
+                                </a>
                                 <figcaption class="figure-caption text-center">
-                                    <h3 class="text-danger">@item.Name</h3>
+                                    <a class="text-danger nounderline" href=@Url.Action("Description","Product", new {id=item.ProductId })>
+                                        <h3 class="text-danger">@item.Name</h3>
+                                    </a>
                                 </figcaption>
                             </figure>
                         </div>
