--- a/Mood Food/Views/Product/Products.cshtml
+++ b/Mood Food/Views/Product/Products.cshtml
@@ -12,8 +12,10 @@
         @foreach (var item in Model)
         {
             <div class="col-lg-3 col-sm-6">
-                <h3 class="display-5 text-center">@item.Name</h3>
-                <img class="img-fluid border border-danger border-3" src=@Url.ProductImagePath(item.NameOfImage) />
+                <a class="text-danger nounderline" href=@Url.Action("Description","Product", new {id=item.ProductId })>
+                    <h3 class="display-5 text-center">@item.Name</h3>
+                    <img class="img-fluid border border-danger border-3" src=@Url.ProductImagePath(item.NameOfImage) />
+                </a>
             </div>
         }
     </div>
