--- a/Mood Food/Views/Shared/_CategoryNav.cshtml
+++ b/Mood Food/Views/Shared/_CategoryNav.cshtml
@@ -5,7 +5,7 @@
 <ul class="nav justify-content-center">
 
     <li class="nav-item">
-        @Html.ActionLink("Całe menu", "Products", "Product", new {category="" }, new { @class = "btn btn-success nav-link" })
+        @Html.ActionLink("Całe menu", "Products", "Product", new { category = "" }, new { @class = "btn btn-danger nav-link" })
     </li>
 
     @foreach (var item in Model)
