--- a/Mood Food/Views/Cart/Index.cshtml
+++ b/Mood Food/Views/Cart/Index.cshtml
@@ -16,17 +16,17 @@
         <table class="table">
             @foreach (var item in Model.CartProducts)
             {
-            <tr>
-                <td>@Html.ActionLink(item.Product.Name, "Description", "Product", new { id = item.Product.ProductId }, new { @class = "nounderline lead text-center text-danger" }) </td>
-                <td> <a href=@Url.Action("Description", "Product", new { id = item.Product.ProductId })><img class="img-thumbnail w-50" src=@Url.ProductImagePath(item.Product.NameOfImage) /> </a> </td>
-                <td><p>@item.Product.Description</p></td>
-                <td><p class="font-weight-bold">Ilość: @item.Quantity</p></td>
-                <td class="font-weight-bold">@item.Value.ToString("c")</td>
-                <td><a class = "btn btn-danger deleteButton" data-id=@item.Product.ProductId href="@Url.Action("Delete", "Cart", new { id = item.Product.ProductId })">Usuń</a></td>
-            </tr>
+                <tr>
+                    <td>@Html.ActionLink(item.Product.Name, "Description", "Product", new { id = item.Product.ProductId }, new { @class = "nounderline lead text-center text-danger" }) </td>
+                    <td><a href=@Url.Action("Description", "Product", new { id = item.Product.ProductId })><img class="imagePreview img-thumbnail w-50" src=@Url.ProductImagePath(item.Product.NameOfImage) /> </a> </td>
+                    <td><p>@item.Product.Description</p></td>
+                    <td><p class="font-weight-bold">Ilość: @item.Quantity</p></td>
+                    <td class="font-weight-bold">@item.Value.ToString("c")</td>
+                    <td><a class="btn btn-danger" href="@Url.Action("Delete", "Cart", new { id = item.Product.ProductId })">Usuń</a></td>
+                </tr>
             }
         </table>
-        <div class="d-flex justify-content-center" id="CenaCalkowita" style="">
+        <div class="d-flex justify-content-center">
 
             @if (Model.TotalValue <= 0)
             {
@@ -35,12 +35,18 @@
             else
             {
                 <p class="font-weight-normal display-4">Całkowity koszt: @Model.TotalValue.ToString("c")</p>
+
             }
 
         </div>
-        <div class="">
-           @Html.ActionLink("Zapłać","Order","Cart",null, new { @class = "btn btn-success" })
-        </div>
 
-</div>
+        @if (Model.TotalValue > 0)
+        {
+            <div class="row align-items-center justify-content-center">
+                @Html.ActionLink("Zamawiam!", "Order", "Cart", null, new { @class = "btn btn-success btn-lg" })
+            </div>
+        }
+
+    </div>
 </section>
+
