--- a/Mood Food/Views/Account/Register.cshtml
+++ b/Mood Food/Views/Account/Register.cshtml
@@ -1,17 +1,19 @@
-﻿@model Mood_Food.Models.ViewModels.LoginViewModel
+﻿@model Mood_Food.Models.ViewModels.RegisterViewModel
 
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Register";
 }
+
 <section>
     <div class="container">
         <div class="row text-white">
             <div class="col-sm-6 offset-sm-3 text-center">
-                @using (Html.BeginForm("Login", "Account", FormMethod.Post))
+
+                @using (Html.BeginForm("Register", "Account", FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
 
-                    <h2 class="text-center display-4">Logowanie</h2>
+                    <h2 class="text-center display-4">Rejestracja</h2>
                     <hr />
                     @Html.ValidationSummary(true, "Wprowadź poprawne dane!", new { @class = "text-danger" })
                     <div class="form-group row ">
@@ -31,18 +33,16 @@
                     </div>
 
                     <div class="form-group row">
-                        @Html.LabelFor(model => model.RememberMe, htmlAttributes: new { @class = "col-lg-1 my-lg-1" })
-                        <div class="col-lg-3">
-                            <div class="form-check">
-                                @Html.EditorFor(model => model.RememberMe)
-                                @Html.ValidationMessageFor(model => model.RememberMe, "", new { @class = "text-danger" })
-                            </div>
+                        @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "col-lg-12 text-danger" })
+                        @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "col-lg-1 my-lg-1 " })
+                        <div class="col-lg-11">
+                            @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control ml-lg-3" } })
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="offset-md-1 col-md-10">
-                            <input type="submit" value="Zaloguj" class="btn btn-success" />
+                            <input type="submit" value="Zarejestruj" class="btn btn-success" />
                         </div>
                     </div>
                 }
