--- a/Mood Food/Views/Shared/_Layout.cshtml
+++ b/Mood Food/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav">
+                    @Html.Partial("_LoginPartial")
                     <li>
                         <a class="nav-link" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
                     </li>
