--- a/Mood Food/Views/Shared/_LoginPartial.cshtml
+++ b/Mood Food/Views/Shared/_LoginPartial.cshtml
@@ -1,23 +1,25 @@
 ﻿@using Microsoft.AspNet.Identity
 
-<li id="login-header">
-    @if (Request.IsAuthenticated)
+
+@if (Request.IsAuthenticated)
+{
+    using (Html.BeginForm("Logoff", "Account", FormMethod.Post, new { id = "logoutForm" }))
     {
-        using (Html.BeginForm("Logoff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
-        {
-            @Html.AntiForgeryToken()
+        @Html.AntiForgeryToken()
 
-            <div>
-                @Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-
-            </div>
-            <div>
-                <a href="javascript:document.getElementById('logoutForm').submit()">Wyloguj</a>
-            </div>
-        }
     }
-    else
-    {
+
+    <li class="nav-item">
+        @Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
+
+    </li>
+    <li class="nav-item">
+        <a class="nav-link " href="javascript:document.getElementById('logoutForm').submit()">Wyloguj</a>
+    </li>
+
+}
+else
+{
     <li class="nav-item">
         @Html.ActionLink("Rejestracja", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "nav-link" })
     </li>
