Added admin role, working on  edit products view

--- a/Mood Food/Views/Cart/OrderConfirmation.cshtml
+++ b/Mood Food/Views/Cart/OrderConfirmation.cshtml
@@ -1,8 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "OrderConfirmation";
+    ViewBag.Title = "Zamówienie złożone";
 }
 
-<h2>OrderConfirmation</h2>
+<h2 class="display-4 text-center">Zamówienie złożone</h2>
 
-Zamówienie złożone!
