--- a/Mood Food/Views/Account/Register.cshtml
+++ b/Mood Food/Views/Account/Register.cshtml
@@ -40,6 +40,13 @@
                         </div>
                     </div>
 
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.Admin, htmlAttributes: new { @class = "col-lg-1 my-lg-1 " })
+                        <div class="col-lg-11">
+                            @Html.EditorFor(model => model.Admin, new { htmlAttributes = new { @class = "form-control ml-lg-3" } })
+                        </div>
+                    </div>
+
                     <div class="form-group">
                         <div class="offset-md-1 col-md-10">
                             <input type="submit" value="Zarejestruj" class="btn btn-success" />
