--- a/Mood Food/Views/Cart/Order.cshtml
+++ b/Mood Food/Views/Cart/Order.cshtml
@@ -97,7 +97,7 @@
 
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-12">
-                                <input type="submit" value="Create" class="btn btn-success" />
+                                <input type="submit" value="Zamawiam!" class="btn btn-success" />
                             </div>
                         </div>
                     </div>
