--- a/Mood Food/Views/Manage/AllProducts.cshtml
+++ b/Mood Food/Views/Manage/AllProducts.cshtml
@@ -7,7 +7,7 @@
 <h2 class="text-center display-4">Wszystkie produkty</h2>
 
 <p class="text-center">
-    @Html.ActionLink("Stwórz nowy", "Create", null, new { @class = "btn btn-success" })
+    @Html.ActionLink("Stwórz nowy", "ProductEdit", null, new { @class = "btn btn-success" })
 </p>
 <table class="table table-striped table-bordered table-responsive-sm">
     <thead>
