--- a/Mood Food/Views/Manage/AllProducts.cshtml
+++ b/Mood Food/Views/Manage/AllProducts.cshtml
@@ -6,13 +6,22 @@
 
 <h2 class="text-center display-4">Wszystkie produkty</h2>
 
+
+@{ if (TempData["Message"] != null)
+    {
+        <div class="alert alert-success text-center" role="alert">
+            @TempData["Message"]
+        </div>
+    }
+}
+
 <p class="text-center">
     @Html.ActionLink("Stwórz nowy", "ProductEdit", null, new { @class = "btn btn-success" })
 </p>
 <table class="table table-striped table-bordered table-responsive-sm">
     <thead>
         <tr>
-            <th >
+            <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
