--- a/Mood Food/Views/Cart/Index.cshtml
+++ b/Mood Food/Views/Cart/Index.cshtml
@@ -18,7 +18,7 @@
             {
                 <tr>
                     <td>@Html.ActionLink(item.Product.Name, "Description", "Product", new { id = item.Product.ProductId }, new { @class = "nounderline lead text-center text-danger" }) </td>
-                    <td><a href=@Url.Action("Description", "Product", new { id = item.Product.ProductId })><img class="imagePreview img-thumbnail w-50" src=@Url.ProductImagePath(item.Product.NameOfImage) /> </a> </td>
+                    <td><a href=@Url.Action("Description", "Product", new { id = item.Product.ProductId })><img style="width:100%;" class="img-responsive"  src=@Url.ProductImagePath(item.Product.NameOfImage) /> </a> </td>
                     <td><p>@item.Product.Description</p></td>
                     <td><p class="font-weight-bold">Ilość: @item.Quantity</p></td>
                     <td class="font-weight-bold">@item.Value.ToString("c")</td>
